# ml_saft

./: .gitignore  README.md  make_predictions.py  pyproject.toml
conf/base/base/: catalog.yml  input_templates.py  logging.yml
conf/base/base/parameters/: cosmo_rs.yml  data_processing.yml  pc_saft_fitting.yml  result_analysis.yml  train_models.yml
conf/base/base/sweeps/: chemprop.yml  ffn.yml  pcsaft_emulator_pvap_density.yml  pyg.yml  pyg_pretrain.yml
data/01_raw/: crc_dipole_moments.csv  fragments.txt  gc_substances.json  gc_train_set.csv  loetgering_lin_parameters.csv  sauer2014_homo.json  sepp_test_set.csv  wikipedia_dipole_moments.csv
data/05_model_input/: e2e_pure_data.pq  pcp_saft_filtered.csv  pcp_saft_outliers.csv  pcp_saft_regressed_filtered.csv  pcp_saft_regressed_outliers.csv  pcp_saft_sepp_filtered.csv  pcp_saft_sepp_outliers.csv  sigma_moments_filtered.csv  sigma_moments_outliers.csv
data/05_model_input/cv_regressed_splits/: train_idx.npy  train_idx_0.npy  train_idx_1.npy  train_idx_2.npy  train_idx_3.npy  train_idx_4.npy  train_idx_5.npy  train_idx_6.npy  train_idx_7.npy  train_idx_8.npy  train_idx_9.npy  valid_idx_0.npy  valid_idx_1.npy  valid_idx_2.npy  valid_idx_3.npy  valid_idx_4.npy  valid_idx_5.npy  valid_idx_6.npy  valid_idx_7.npy  valid_idx_8.npy  valid_idx_9.npy
data/05_model_input/e2e_splits/: cluster_labels.npy  test_idx.npy  train_idx.npy  valid_idx.npy
data/05_model_input/regressed_splits/: cluster_labels.npy  test_idx.npy  train_idx.npy  valid_idx.npy
data/05_model_input/sigma_moments_splits/: clusters.npy  test_idx.npy  train_idx.npy  valid_idx.npy
data/05_model_input/splits/: test_idx.npy  train_idx.npy  valid_idx.npy
notebooks/: 3d_conformer_generation.ipynb  cosmo_dortmund.ipynb  e2e.ipynb  example_compounds.py  explore_sepp.ipynb  holdout_sets.ipynb  painn_pcp_saft.ipynb  painn_qm9_mu.ipynb  pcsaft_regression.ipynb  sensitivity_analysis.ipynb  sensitivity_tests.ipynb  visualize_thermoml.ipynb  visualize_uncertainty.ipynb
src/dl4thermo/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/dl4thermo/extras/utils/: cluster_split.py  conformer.py  data_transform.py  metrics.py  molecular_fingerprints.py  parallel.py  pcsaft.py  plotting.py  scraping.py  sensitivity.py  wandb_utils.py
src/dl4thermo/pipelines/cosmo_rs/: __init__.py  nodes.py  pipeline.py
src/dl4thermo/pipelines/data_processing/: nodes.py  pipeline.py
src/dl4thermo/pipelines/pc_saft_fitting/: README.md  __init__.py  nodes.py  pipeline.py
src/dl4thermo/pipelines/result_analysis/: nodes.py  pipeline.py
src/dl4thermo/pipelines/train_models/: __init__.py  nodes.py  pipeline.py
src/mlsaft/: __init__.py  hooks.py  pipeline_registry.py  settings.py
src/mlsaft/extras/kedro_datasets/: atoms_dataset.py  checkpoint_dataset.py  (+2 more)
src/tests/: test_run.py
(+43 files in other folders)
